# claude-memory

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/claude_memory/: __init__.py  cli.py  config.py  consolidator.py  db.py  display.py  embedding.py  extractor.py  generator.py  graph.py  hooks.py  mcp_server.py  models.py  parser.py  search.py  timeline.py  utils.py  watcher.py
src/claude_memory/web/: app.py
src/claude_memory/web/static/: graph.js  index.html
tests/: conftest.py  test_cli.py  test_config.py  test_consolidator.py  test_db.py  test_display.py  test_embedding.py  test_extractor.py  test_generator.py  test_graph.py  test_hooks.py  test_integration.py  test_mcp_server.py  test_parser.py  test_search.py  test_timeline.py  test_utils.py  test_watcher.py  test_web.py
tests/fixtures/: error_fix_session.jsonl
