[project]
name = "claude-memory"
version = "0.4.0"
description = "Cross-session memory system for Claude Code — extract, index, and recall context across sessions"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Zey413"}]
keywords = ["claude", "memory", "ai", "context", "session"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
embeddings = [
    "sentence-transformers>=2.0",
    "numpy>=1.24",
]
mcp = [
    "mcp[cli]>=1.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff>=0.4",
]

[project.scripts]
claude-memory = "claude_memory.cli:cli"
claude-memory-mcp = "claude_memory.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_memory"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
